# austin-healthcare-price-transparency

./: .replit  Pasted-I-need-you-to-create-a-full-stack-app-for-me-that-I-can-easily-deploy-on-vercel-The-backend-tables--1730788523170.txt  app.py  data_processor.py  pyproject.toml  replit.nix  requirements.txt  structure.py  vercel.json  vercel.txt
static/css/: style.css
static/data/: Austin_Aetna_PPO_data.csv  summary_Austin_Aetna_PPO.csv  summary_Austin_BCBS_Essentials.csv  summary_Austin_Cigna_OAP.csv  summary_Austin_UHC_Options_PPO.csv
static/js/: search.js  stats.js
templates/: base.html  index.html  search.html  search_results.html  stats.html  stats_results.html
